# DeepResearch

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  项目流程图.md
config/: __init__.py  client_factory.py  config.py  constants.py  env_loader.py  env_writer.py  logging_setup.py  settings.py
core/: README.md  context_components.py  context_manager.py  interfaces.py  message_types.py  patch_manager.py  progress.py  state_fields.py  state_manager.py  workflow_executor.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md
logic/: file_saver.py  post_processing.py
planning/: __init__.py  outline.py  tool_definitions.py
scripts/: README.md  clear_pycache.py
scripts/failed_json_cases/: README.md  failed_CritiqueModel_case1.json  failed_CritiqueModel_case4.json  failed_cases_summary_20251107_164614.json  failed_unknown_case6.json  failed_unknown_case8.json  failed_unknown_case9.json
services/: README.md  fetchers.py  llm_interaction.py  vector_db.py
services/llm/: __init__.py  message_processor.py  retry_strategy.py
services/web_research/: __init__.py  cache.py  instrumentation.py  models.py
services/web_research/citation/: __init__.py
services/web_research/dedupe/: __init__.py
services/web_research/fetch_strategy/: __init__.py  requests_client.py
services/web_research/parser/: html_parser.py
services/web_research/pipeline/: __init__.py  executor.py  search.py
tests/: run_tests.py  test_cache_manager.py  test_config.py  test_constants.py  test_context_manager.py  test_error_handler.py  test_graph_builder.py  test_integration.py  test_json_repair.py  test_json_repair_enhanced.py  test_llm_interaction.py  test_message_processor.py  test_nodes.py  test_patch_manager.py  test_performance_monitor.py  test_progress.py  test_section_matching.py  test_text_normalizer.py  test_text_processor.py  test_vector_db.py  test_workflow_executor.py
tests/polish/: __init__.py  test_content_assembler.py  test_quality_checker.py  test_utils.py
utils/: README.md  cache_manager.py  citation.py  draft_manager.py  error_handler.py  factcheck.py  file_handler.py  id_manager.py  iteration_storage.py  json_repair.py  latex_handler.py  log_streamer.py  performance_monitor.py  progress.py  progress_tracker.py  text_normalizer.py  text_processor.py
workflows/: README.md  graph_builder.py  graph_nodes.py  graph_runner.py  graph_state.py  prompts.py
workflows/nodes/: __init__.py  apply_patches.py  critique.py  digest.py  draft.py  memory.py  plan.py  polish.py  refine.py  research.py  skeleton.py  style_guide.py
workflows/nodes/polish/: README.md  __init__.py  citation_handler.py  content_assembler.py  content_processor.py  polish_main.py  quality_checker.py  utils.py
workflows/nodes/sub_workflows/: __init__.py  (+4 more)
